# switcharoo

./: .dockerignore  .env  .gitignore  .projectile  Cargo.toml  Dockerfile  README.md  README.org  docker-compose.yml
database/seed/: 1-USERS.sql  2-PERMISSIONS.sql
redis/: redis.conf
redis/data/: dump.rdb
src/: config.rs  main.rs  web.rs
src/auth/: claim.rs
src/backends/: mod.rs  redis.rs
src/models/: mod.rs  permission.rs  user.rs
src/routes/: auth.rs  features.rs  login.rs  mod.rs  permissions.rs  users.rs  web.rs
src/routes/auth/: mod.rs  users.rs
web/: .babelrc  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: index.html  index.js  routes.js
web/src/components/App/: index.js
web/src/components/Dashboard/: index.js
web/src/components/Form/: index.css  index.js
web/src/components/Header/: index.css  index.js
web/src/components/Login/: index.js
web/src/components/SearchBar/: index.js
web/src/components/Toggle/: index.js  index.scss
web/src/components/features/: add.js  edit.js  show.js
web/src/components/home/: index.js
web/src/components/login/: index.js
web/src/components/logout/: index.js
web/src/components/permissions/: add.js  edit.js  show.js
web/src/components/signup/: index.js
web/src/components/users/: add.js  edit.js  show.js
web/src/utils/: axios.js  providers.js
