[package]
name = "switcharoo"
version = "0.1.0"
authors = ["Mark Pedersen <markrepedersen@gmail.com>"]
edition = "2018"

[dependencies]
actix-multipart = "0.3"
actix-web = { version = "3" }
actix-redis = "0.9"
actix-session = "0.4"
futures = "0.3"
serde = "1"
serde_json = "1"
toml = "0.5"
rand = "0.8"
rust-argon2 = "0.8"
env_logger = "0.8"
sqlx = { version = "0.3", features = ["postgres", "uuid"] }
dotenv = "0.15"
anyhow = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
redis = { version = "0.20", features = ["tokio-comp"] }
