[package]
name = "switcharoo"
version = "0.1.0"
authors = ["Mark Pedersen <markrepedersen@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.5"
actix-files = "0.6.0-beta.4"
actix-web-httpauth = "0.6.0-beta.1"
redis = { version = "0.20", features = ["tokio-comp", "aio"] }
deadpool-redis = { version = "0.7.1", features = ["config"] }
jsonwebtoken = "7"
futures = "0.3"
serde = "1"
serde_json = "1"
rand = "0.8"
rust-argon2 = "0.8"
env_logger = "0.8"
sqlx = { version = "0.3", features = ["postgres", "uuid"] }
dotenv = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
anyhow = "1"
toml = "0.5"
